select menu updated

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         line-height: 0.8;
     }
     .caret-rotate{
-        transition: rotate(180deg);
+        transform: rotate(180deg);
     }
     .active{
         background:#23242a;
@@ -42,7 +42,7 @@
                     <span class="selected ">Figma</span>
                     <div class="caret  w-0 h-0 border-l-8 border-r-8 border-solid border-t-8 border-t-black900 transition-3s "></div>
                 </div>
-                <ul class="menu hidden z-1 opacity-0 py-2.5 px-4 bg-orenge100 border shadow-boxshadow rounded-md text-white absolute top-12 left-50% w-100% translate-x-1/2  transition-3s ">
+                <ul id="open" class="menu hidden z-1 opacity-0 py-2.5 px-4 bg-orenge100 border shadow-boxshadow rounded-md text-white absolute top-12 left-50% w-100% translate-x-1/2  transition-3s ">
                     <li class="pt-2.5 my-1.5 rounded-md cursor-pointer hover:bg-gren900">Framer</li>
                     <li class="pt-2.5 my-1.5 rounded-md cursor-pointer hover:bg-gren900">sketch</li>
                     <li class="pt-2.5 my-1.5 rounded-md cursor-pointer hover:bg-gren900">Invision Studio</li>
